Issue fix: Load More button visible after the full list is loaded

--- a/css/app.css
+++ b/css/app.css
@@ -1,7 +1,4 @@
 ﻿
-p .button {
-	display: inline !important;
-}
 
 .hero-section {
     background: url("../images/header.jpg") 50% no-repeat;
